fix: add margin for morph video on mobile

--- a/src/components/sections/FirstLiveSimulator/style.module.scss
+++ b/src/components/sections/FirstLiveSimulator/style.module.scss
@@ -45,7 +45,7 @@
   margin-top: 140px;
 
   @media screen and (max-width: $desktop){
-    margin: 0;
+    margin: 120px 0;
   }
 }
 
